...
      });
  }, []);

  return (
    <SectionList
      sections={productLists}
      testID="sectionList"
      ListEmptyComponent={ListEmptyComponent}
      keyExtractor={(item, index) => item + index}
      renderItem={({ item }) => (
        <View style={styles.item}>
          <Text style={styles.title} accessibilityLabel={item.title}>
            {item.title}
...
